fixed footer and fixing column header align

--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ td{
   color: #FFFFFF;
   min-width: 125px;
   padding: 10px;
-  /* margin: 0 auto; */
   text-align: center;
+  vertical-align: middle;
   text-transform: uppercase;
   background: #7e0820;
 }
@@ -145,8 +145,8 @@ footer{
   text-align:center;
   color: #FFFFFF;
   min-height: 75px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  /* left: 0; */
+  left: 0;
 }
 
